<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<!-- Read Meter, should appear as action button -->
    <item android:id="@+id/action_read_meter"
          android:icon="@drawable/ic_action_read_meter"
          android:title="@string/action_read_meter"
          android:showAsAction="ifRoom" />
    
    <!-- More -->
    <item
        android:id="@+id/a_More"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="More">
        <menu>            
            <!-- Profile -->
            <item
		        android:id="@+id/action_settings"
		        android:showAsAction="never"
		        android:title="@string/action_settings"/>
            
		    <!-- Set Reminders -->
		    <item
		        android:id="@+id/action_reminder"
		        android:showAsAction="never"
		        android:title="@string/action_reminder"/>
		    
		    <!-- Help -->
            <!-- <item
                android:id="@+id/action_help"
                android:showAsAction="never"
                android:title="@string/action_help"/> -->
            
		    <!-- Logout -->
		    <item
		        android:id="@+id/action_logout"
		        android:showAsAction="never"
		        android:title="@string/action_logout"/>
    
        </menu>
    </item>

</menu>
