<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" 
    tools:context=".MainActivity" >
  
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/utility_types"
        android:prompt="@string/utility_prompt" />
	<Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/meter_types"
        android:prompt="@string/meter_prompt" />
	<Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/meter_units"
        android:prompt="@string/units_prompt" />
	
	 <Button
        android:id="@+id/buttonStartMeterRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK" />
 
</LinearLayout>